--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "dependencies": {
     "mobile-detect": "^1.4.1",
+    "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-scripts": "1.1.4",
     "styled-components": "^3.3.2"
   },
   "scripts": {
-    "lint": "eslint src",
+    "lint": "eslint src --fix",
     "lint:watch": "npm run lint -- --watch",
-    "prestart": "npm run lint",
     "start": "react-scripts start npm run lint:watch",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
